fixed addToCartModal links, and improved visibility of the modal

--- a/src/components/css/AddToCartModal.css
+++ b/src/components/css/AddToCartModal.css
@@ -21,7 +21,7 @@
 }
 
 .addToCartModal{
-    width: 100vw;
+    width: 100%;
     height: 20%;
     top: 0;
     left: 0;
@@ -45,7 +45,7 @@
     background: white;
     color: var(--text-color);
     font-size: var(--normal-font-size);
-    
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
 
@@ -68,6 +68,7 @@
     display: flex;
     gap: 15px;
     align-items: center;
+    
 }
 
 .addedItemImgContainer {
@@ -100,6 +101,7 @@
 
 .addToCartModalBtn {
     padding: 15px 0;
+    font-size: var(--normal-font-size);
     font-weight: var(--bold-font-weight);
     border-radius: 3px;
 }
@@ -114,7 +116,7 @@
     border: none;
 }
 
-.continueShoppingBtn {
+.continueShoppingBtn {   
     color: var(--text-color);
     background-color: white;
     border: var(--page-normal-border);
